# virtuous-hummingbird

./: .gitignore  README.md  SConstruct  aikaterine-common.cabal  build.gradle  contributing.md  gradle.properties  settings.gradle  stack.yaml  waterfall.md
AikaterineLibrary/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  fragment_analysis.xml  fragment_editor.xml  fragment_third.xml  fragment_tracker.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs.xml  strings.xml
doc/requirements/: .gitignore  business.tex  classes.cmap  prd.md  product.tex  project.tex  requirements.tex  summary.tex  user.tex
gradle/wrapper/: gradle-wrapper.properties
log/: README.md
src/: Aikaterine.hs  README.md  aikaterine.c  aikaterine.h  aikaterine_desktop.c  app.c  desktop.c  desktop.h  draw.c  drawing.c  drawing.h  shader.c  shader.h  shaders.c  shapes.c  text.c  ui.c  ui.h
src/Aikaterine/: Analysis.hs  Drawing.hs
src/app/: README.md  aikaterine_desktop.c  app.c  app.h  desktop.c  desktop.h  drawing.c  drawing.h  error.h  shaders.c
src/desktop/: Main.hs
src/draw/: color.h  draw.c  draw.h  shader.c  shader.h  shapes.c  shapes.h  text.c  text.h  window.h
src/lib/: README.md  aikaterine.c  aikaterine.h
src/main/java/com/autumnara/aikaterine/: AbstractResource.java  AbstractView.java  Activity.java  App.java  Application.java  ApplicationStarter.java  BiBounded.java  Bounded.java  BoundedFloat.java  Color.java  ColorHCL.java  ColorHSV.java  ColorRGB.java  DuplicateElementException.java  GraphView.java  HCL.java  IllegalCycleException.java  MutableVirtue.java  Position.java  PositionPolar.java  PositionRectangular.java  Promise.java  Quality.java  RGB.java  ResourceObject.java  Shader.java  ShaderProgram.java  SubLifecycle.java  UIComponent.java  UIEmpty.java  UIGraph.java  UIObject.java  Viewport.java  Virtue.java  VirtueGraph.java  VirtueGraphView.java  VirtueNode.java  Window.java  WindowBoundary.java  WindowReference.java
src/main/resources/: LinkVertex.glsl  NodeFragment.glsl  NodeVertex.glsl  aikaterine.fxml
src/ui/: ui.c  ui.h
(+50 files in other folders)
