name:                aikaterine-common
version:             0.0.0
synopsis:            An architecture for the collection and evaluation of knowledge.
homepage:            https://github.com/wintertideheir/Aikaterine
license:             AGPL-3
license-file:        LICENSE
copyright:           2017, Wintertideheir
author:              Wintertideheir
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.9 && <5.0,
                       fgl >=5.5 && <5.6
  exposed-modules:     Aikaterine
  default-language:    Haskell2010
