name:                aikaterine-common
version:             0.0.0
synopsis:            An architecture for the collection and evaluation of knowledge.
homepage:            https://github.com/wintertideheir/Aikaterine
license:             AGPL-3
license-file:        LICENSE
copyright:           2017, Wintertideheir
author:              Wintertideheir
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <5.0,
                       containers >= 0.5 && <0.6,
                       vector >= 0.11 && <0.12,
                       text >= 1.2 && <1.3,
                       fgl >=5.5 && <5.6
  exposed-modules:     Aikaterine
  default-language:    Haskell2010

executable aikaterine-desktop
  hs-source-dirs:      src/desktop
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5.0,
                       GLFW-b >=1.4 && <1.5,
                       OpenGLRaw >=3.2 && <3.3
  default-language:    Haskell2010
